tests/baselines/reference/for-of30.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of30.ts(1,15): error TS2322: Type 'StringIterator' is not assignable to type 'Iterable<string>'.
  Types of property '[Symbol.iterator]' are incompatible.
    Type '() => StringIterator' is not assignable to type '() => Iterator<string>'.
      Signature '(): Iterator<string>' has no corresponding signature in '() => StringIterator'
        Type 'StringIterator' is not assignable to type 'Iterator<string>'.
          Types of property 'return' are incompatible.
            Type 'number' is not assignable to type '(value?: any) => IteratorResult<string>'.
              Signature '(value?: any): IteratorResult<string>' has no corresponding signature in 'Number'


==== tests/cases/conformance/es6/for-ofStatements/for-of30.ts (1 errors) ====
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'StringIterator' is not assignable to type 'Iterable<string>'.
!!! error TS2322:   Types of property '[Symbol.iterator]' are incompatible.
!!! error TS2322:     Type '() => StringIterator' is not assignable to type '() => Iterator<string>'.
!!! error TS2322:       Signature '(): Iterator<string>' has no corresponding signature in '() => StringIterator'
!!! error TS2322:         Type 'StringIterator' is not assignable to type 'Iterator<string>'.
!!! error TS2322:           Types of property 'return' are incompatible.
!!! error TS2322:             Type 'number' is not assignable to type '(value?: any) => IteratorResult<string>'.
!!! error TS2322:               Signature '(value?: any): IteratorResult<string>' has no corresponding signature in 'Number'
    
    class StringIterator {
        next() {
            return {
                done: false,
                value: ""
            }
        }
        
        return = 0;
        
        [Symbol.iterator]() {
            return this;
        }
    }